@@ -31,6 +31,9 @@
 #include "config.h"
 #include "Crypto.h"
 
+#if OS(DARWIN)
+#include "CommonCryptoUtilities.h"
+#endif
 #include "Document.h"
 #include "ExceptionCode.h"
 #include "SubtleCrypto.h"
@@ -58,7 +61,12 @@ ExceptionOr<void> Crypto::getRandomValues(ArrayBufferView& array)
         return Exception { TYPE_MISMATCH_ERR };
     if (array.byteLength() > 65536)
         return Exception { QUOTA_EXCEEDED_ERR };
+#if OS(DARWIN)
+    int rc = CCRandomCopyBytes(kCCRandomDefault, array.baseAddress(), array.byteLength());
+    RELEASE_ASSERT(rc == kCCSuccess);
+#else
     cryptographicallyRandomValues(array.baseAddress(), array.byteLength());
+#endif
     return { };
 }
 
